@@ -9,6 +9,8 @@ pre-1.0 releases are numbered as 0.XX.
 - Very large clippings (such as Moby Dick) no longer cause discernable lag
 time when viewed in the bezel
 - Sparkle auto-updater not triggering on launch
+### Changed
+- Minimum number of clips to remember is now a more sane 10 instead of 1
 
 ## [0.70] - 2019-09-01
 ### Fixed
